#navbar-alignment-fix

--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -21,11 +21,6 @@
 .navbar_button {
   width: 160px;
   height: 56px;
-
-  /* Primary Color 3
-    
-    Corn Yellow
-    */
   background: #fdd03b;
   border-radius: 30px;
   border: 0 !important;
@@ -43,6 +38,7 @@
   border-radius: 0.25rem;
   text-decoration: none;
   color: #000;
+
 }
 
 .show-counter .countdown {
@@ -72,7 +68,24 @@
   font-weight: 400;
   font-size: 20px;
   line-height: 32px;
-  /* identical to box height, or 160% */
 
   text-align: center;
 }
+
+
+
+
+@media screen and (max-width: 500px) {
+    .navbar_counter_value{
+     font-size: large;
+    }
+    .navbar_counter_type{
+    font-size: x-small !important;
+    }
+    .navbar_counter_desc{
+     font-size: small !important;
+    }
+    .show-counter .countdown-link{
+        margin-top: 5px;
+    }
+     }
